2006-02-16  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._sequence_for): don't assume that all
	drivers have a "sequence_mapper" attribute.

2006-02-16  Hamish Lawson  <hbl@st-andrews.ac.uk>

	* src/pydo/base.py: Moved some sequence-mapping code from _metapydo to new 
	method PyDO._sequence_for.
    
	* src/pydo/drivers/oracleconn.py: Tidying up of OracleDBI.describeTable.

2006-02-14  Hamish Lawson  <hbl@st-andrews.ac.uk>

    * src/pydo/base.py: Added sequence_mapper attribute, a function taking 
	parameters 'table' and 'column' and returning the sequence used in 
	incrementing a column, for those databases that use a sequence for 
	autoincrementing.
    
	* src/pydo/drivers/oracleconn.py: Added OracleDBI.describeTable.


2006-01-13  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.describeTable): fix
	for when indkey contains negative attnums in finding indices.
	(Currently the policy is not to report such indexes at all.)

2005-11-18  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._joinTableSQL): fix for berlios bug #5665
	-- bind values being passed in wrong order.
	
	* tests/test_base.py (test_getCount1): test for getCount.

	* src/pydo/base.py (PyDO.getCount): adding getCount convenience
	method (closes bug #4712).

2005-11-17  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/__init__.py (__version__): upping version number to
	2.0rc1. 

	* doc/manual.rst: document the new module parameters to project
	and autoschema.

	* src/pydo/base.py (PyDO.project): use moduleize when passed in a
	module. (autoschema): ditto.

	* src/pydo/utils.py (moduleize): convenience function for
	associating a dynamically created class with a module, in order
	to pickle or unpickle it.

	* tests/test_base.py (test_one_to_many3): test for 1-2->1 bug.

	* src/pydo/base.py (PyDO._update_raw): use new has_sane_rowcount
	flag.  This fixes berlios bug #5521.