@@ -1,4 +1,4 @@
-Development Status :: 4 - Beta
+Development Status :: 5 - Production/Stable
 Intended Audience :: Developers
 License :: OSI Approved :: BSD License
 License :: OSI Approved :: GNU General Public License (GPL)
